fixed height for dino and no overflow on smaller screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -110,11 +110,12 @@ $selectedColor: rgb(23, 105, 228);
     width: 100%;
     height: 100%;
     transition: opacity 2s linear;
+    overflow: hidden;
 }
 
 .logo {
     position: absolute;
-    height: 35%;
+    height: 21rem;
     pointer-events: none;
 }
 
